--- a/index.html
+++ b/index.html
@@ -2,36 +2,60 @@
 <html>
 <head>
     <title>Career Explorer</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Career Explorer</h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">Career Explorer</a>
+    <div class="navbar-nav">
+      <a class="nav-link" href="index.html">Home</a>
+      <a class="nav-link" href="page2.html">Careers</a>
+    </div>
+  </div>
+</nav>
 
-<p>Welcome to Career Explorer! This website helps you learn about different career paths.</p>
+<div class="container mt-5">
 
-<h2>Why Explore Careers?</h2>
-<p>Learning about careers helps you make better decisions about your future.</p>
+    <h1 class="text-center custom-heading">Welcome to Career Explorer</h1>
 
-<ul>
-    <li>Discover new jobs</li>
-    <li>Learn required skills</li>
-    <li>Understand salary expectations</li>
-</ul>
+    <p class="lead text-center">
+        This website helps you learn about different career paths.
+    </p>
 
-<img src="images/career.jpg" alt="Career Path Image" width="50">
+    <h2 class="section-title">Why Explore Careers?</h2>
 
-<p><a href="page2.html">Explore Careers</a></p>
+    <ul class="list-group mb-4 shadow-sm">
+        <li class="list-group-item">Discover new jobs</li>
+        <li class="list-group-item">Learn required skills</li>
+        <li class="list-group-item">Understand salary expectations</li>
+    </ul>
 
-<p>
-  <a href="https://www.w3schools.com/whatis/" target="_blank">
-    Learn more about coding and how websites are built
-  </a>
-</p>
+    <div class="row text-center">
+        <div class="col-md-4">
+            <img src="images/career.jpg" class="img-fluid rounded career-img" alt="Career Path">
+        </div>
+        <div class="col-md-4">
+            <img src="images/coding.jpg" class="img-fluid rounded career-img" alt="Coding Career">
+        </div>
+        <div class="col-md-4">
+            <img src="images/doctor.jpg" class="img-fluid rounded career-img" alt="Doctor Career">
+        </div>
+    </div>
+
+    <div class="text-center mt-4">
+        <a href="page2.html" class="btn btn-primary btn-lg custom-btn">Explore Careers</a>
+    </div>
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
-
-<img src="images/coding.jpg" alt="Coding Career" width="50">
-<img src="images/doctor.jpg" alt="Doctor Career" width="50">
-
 </html>
