--- a/page2.html
+++ b/page2.html
@@ -1,32 +1,63 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
 <head>
     <title>Career Options</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Career Options</h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">Career Explorer</a>
+    <div class="navbar-nav">
+      <a class="nav-link" href="index.html">Home</a>
+      <a class="nav-link" href="page2.html">Careers</a>
+    </div>
+  </div>
+</nav>
 
-<p>Here are some popular career paths you can explore:</p>
+<div class="container mt-5">
 
-<ol>
-    <li>Software Engineer</li>
-    <li>Doctor</li>
-    <li>Teacher</li>
-    <li>Graphic Designer</li>
-</ol>
+    <h1 class="text-center custom-heading">Popular Careers</h1>
 
-<img src="images/career.jpg" alt="Career Skills Image" width="50">
+    <div class="row mt-4">
 
-<h2>Skills Needed</h2>
-<p>Each career requires different skills such as communication, problem-solving, and creativity.</p>
+        <div class="col-md-4">
+            <div class="card shadow-sm mb-4"></div>
+            <div class="card-body">
+                    <h5 class="card-title">Software Developer</h5>
+                    <p class="card-text">Designs and builds applications and systems.</p>
+                </div>
+            </div>
+        </div>
 
-<p><a href="index.html">Back to Home</a></p>
+        <div class="col-md-4">
+            <div class="card shadow-sm custom-card">
+                <div class="card-body">
+                    <h5 class="card-title">Doctor</h5>
+                    <p class="card-text">Diagnoses and treats patients.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="card shadow-sm custom-card">
+                <div class="card-body">
+                    <h5 class="card-title">Teacher</h5>
+                    <p class="card-text">Educates and inspires students.</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
-
-<img src="images/coding.jpg" alt="Software Engineer" width="50">
-<img src="images/doctor.jpg" alt="Doctor" width="50">
-
 </html>
